--- a/styles/main.css
+++ b/styles/main.css
@@ -1,49 +1,160 @@
-body{
-width: 100%;
-height: 100%;
-}
-.menu-principal{
-width: 100%;
-background-color: #252323;
-height: 60px;
-}
-main{
-margin: 0 auto;
-width: 980px;
-position: relativa;
-}
-.logo{
-float: left;
-	padding:16px;
-	width:50%;
+body {
+	width: 100%;
+	height: 100%;
+	margin: 0 auto;
 }
 
-header-2{
-background-color: #ffffff;
-width: 980px;
-margin: 0 auto;
-padding:30px;
+ul {
+	padding: 0px;
 }
-menu-urls
-{
-border-bottom: 3px solid #efefef;
+
+.menu-principal {
+	width: 100%;
+	background-color: #252323;
+	height: 120px;
 }
-.menu ul li{
+
+main, .content {
+	margin: 0 auto;
+	width: 980px;
+	position: relative;
+}
+
+.logo {
+	float: left;
+	width: 100%;
+}
+
+.header-2 {
+	background-color: #ffffff;
+	width: 980px;
+	margin: 0 auto;
+	padding: 16px;
+}
+
+.menu-urls {
+	height: 80px;
+	border-bottom: 3px solid #efefef;
+}
+
+.menu ul li {
 	display: inline-block;
-}
-
-.menu ul li a{
 	color: #8b8b8b;
-	text-decoration: none;
-	font-size: 18px;
+	margin-left: 15px;
+	height: 50px;
 }
 
-.menu{
-	width:70%;
-	float:left;
+	.menu ul li:hover {
+		border-bottom: 3px solid #00bac6;
+	}
+
+	.menu ul li a:hover {
+		color: #00bac6;
+	}
+
+	.menu ul li a {
+		color: #8b8b8b;
+		text-decoration: none;
+		font-size: 18px;
+		text-transform: uppercase;
+	}
+
+.menu {
+	width: 70%;
+	float: left;
 }
 
-.busca{
-	width:30%;
-	float:right;
+.col-100 {
+	width: 100%;
+	float: left;
+	position: relative;
 }
+
+.imagem-background {
+	background-image: url();
+	height: 300px;
+	border: 1px solid #c5c5c5;
+	padding-top: 15px;
+	padding-bottom: 15px;
+	margin-left: 10px;
+}
+
+.texto-destaque {
+	text-align: center;
+}
+
+	.texto-destaque strong {
+		color: #646464;
+	}
+
+	.texto-destaque h1 {
+		text-transform: uppercase;
+		font-size: 30px;
+		color: #818181;
+	}
+
+	.texto-destaque p {
+		font-size: 15px;
+		color: #9a9a9a;
+	}
+
+.col-3 {
+	text-align: center;
+	padding-left: 15px;
+	padding-right: 15px;
+	width: 29%;
+	float: left;
+	position: relative;
+}
+
+.bloco-imagem img {
+	margin: 0 auto;
+	width: 100%;
+	height: auto;
+}
+
+.bloco-imagem {
+	height: 300px;
+	border: 1px solid #c5c5c5;
+	padding-top: 15px;
+	padding-bottom: 15px;
+	margin-left: 10px;
+}
+
+	.bloco-imagem b, p {
+		text-align: left;
+	}
+
+.bloco-texto {
+	margin-top: 3em;
+}
+
+.bloco-imagens-texto {
+	background-color: #eeeeee;
+}
+
+	.bloco-imagens-texto:before {
+		width: 100%;
+		display: inline-block;
+		content: '';
+		height: 52px;
+		background: #ffffff;
+		background-position: center;
+	}
+
+	.bloco-imagens-texto:after {
+		width: 100%;
+		display: inline-block;
+		content: '';
+		height: 70px;
+		background: #eeeeee;
+	}
+
+.footer {
+	color: #ffffff;
+}
+
+	.footer p {
+		width: 90%;
+		text-align: left;
+	}
